PRACTICA9/Practica-09-DEBERES/src/parser/y.output
   0  $accept : programa $end

   1  programa : definiciones main

   2  definiciones :
   3               | definiciones definicion

   4  definicion : variable
   5             | funcion

   6  funcion : DEF ID '(' parametros ')' ':' tipoReturn body

   7  main : DEF MAIN '(' ')' ':' VOID body

   8  body : '{' variables sentencias '}'
   9       | '{' '}'
  10       | '{' sentencias '}'
  11       | '{' variables '}'

  12  sentencias : sentencia
  13             | sentencias sentencia

  14  sentencia : RETURN expression ';'
  15            | while
  16            | print
  17            | input
  18            | if
  19            | ifSimple
  20            | invocationStat ';'
  21            | assignment

  22  invocationStat : ID '(' paramsInvocation ')'

  23  invocationExpr : ID '(' paramsInvocation ')'

  24  paramsInvocation : expressiones
  25                   |

  26  assignment : expression '=' expression ';'

  27  if : IF expression ':' sentencia ELSE sentencia
  28     | IF expression ':' sentencia ELSE '{' sentencias '}'
  29     | IF expression ':' '{' sentencias '}' ELSE sentencia
  30     | IF expression ':' '{' sentencias '}' ELSE '{' sentencias '}'

  31  ifSimple : IF expression ':' sentencia
  32           | IF expression ':' '{' sentencias '}'

  33  parametros : parametrosAUX
  34             |

  35  parametrosAUX : parametro
  36                | parametrosAUX ',' parametro

  37  parametro : ID ':' tipo

  38  variables : variable
  39            | variables variable

  40  variable : ident ':' tipoCompuesto ';'

  41  ident : ID
  42        | ident ',' ID

  43  tipo : INT
  44       | DOUBLE
  45       | CHAR

  46  tipoCompuesto : tipo
  47                | '[' INT_CONSTANT ']' tipoCompuesto
  48                | STRUCT '{' bodyStruct '}'

  49  tipoReturn : tipo
  50             | VOID

  51  bodyStruct : variablesStruct
  52             | bodyStruct variablesStruct

  53  variablesStruct : ident ':' tipoCompuesto ';'

  54  expressiones : expression
  55               | expressiones ',' expression

  56  expression : ID
  57             | expression '+' expression
  58             | expression '-' expression
  59             | expression '*' expression
  60             | expression '/' expression
  61             | expression '%' expression
  62             | expression '.' ID
  63             | '(' expression ')'
  64             | expression '[' expression ']'
  65             | '!' expression
  66             | '-' expression
  67             | expression '>' expression
  68             | expression '<' expression
  69             | expression DISTINTO expression
  70             | expression MAYORIGUAL expression
  71             | expression MENORIGUAL expression
  72             | expression EQUIVALENTE expression
  73             | expression AND expression
  74             | expression OR expression
  75             | REAL_CONSTANT
  76             | INT_CONSTANT
  77             | CHAR_CONSTANT
  78             | cast
  79             | invocationExpr

  80  cast : '(' tipo ')' expression

  81  while : WHILE expression ':' '{' sentencias '}'

  82  print : PRINT expressiones ';'

  83  input : INPUT expressiones ';'

state 0
	$accept : . programa $end  (0)
	definiciones : .  (2)

	.  reduce 2

	programa  goto 1
	definiciones  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : definiciones . main  (1)
	definiciones : definiciones . definicion  (3)

	ID  shift 3
	DEF  shift 4
	.  error

	main  goto 5
	definicion  goto 6
	variable  goto 7
	funcion  goto 8
	ident  goto 9


state 3
	ident : ID .  (41)

	.  reduce 41


state 4
	funcion : DEF . ID '(' parametros ')' ':' tipoReturn body  (6)
	main : DEF . MAIN '(' ')' ':' VOID body  (7)

	ID  shift 10
	MAIN  shift 11
	.  error


state 5
	programa : definiciones main .  (1)

	.  reduce 1


state 6
	definiciones : definiciones definicion .  (3)

	.  reduce 3


state 7
	definicion : variable .  (4)

	.  reduce 4


state 8
	definicion : funcion .  (5)

	.  reduce 5


state 9
	variable : ident . ':' tipoCompuesto ';'  (40)
	ident : ident . ',' ID  (42)

	':'  shift 12
	','  shift 13
	.  error


state 10
	funcion : DEF ID . '(' parametros ')' ':' tipoReturn body  (6)

	'('  shift 14
	.  error


state 11
	main : DEF MAIN . '(' ')' ':' VOID body  (7)

	'('  shift 15
	.  error


state 12
	variable : ident ':' . tipoCompuesto ';'  (40)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21
	tipoCompuesto  goto 22


state 13
	ident : ident ',' . ID  (42)

	ID  shift 23
	.  error


state 14
	funcion : DEF ID '(' . parametros ')' ':' tipoReturn body  (6)
	parametros : .  (34)

	ID  shift 24
	')'  reduce 34

	parametros  goto 25
	parametrosAUX  goto 26
	parametro  goto 27


state 15
	main : DEF MAIN '(' . ')' ':' VOID body  (7)

	')'  shift 28
	.  error


state 16
	tipo : INT .  (43)

	.  reduce 43


state 17
	tipo : DOUBLE .  (44)

	.  reduce 44


state 18
	tipo : CHAR .  (45)

	.  reduce 45


state 19
	tipoCompuesto : STRUCT . '{' bodyStruct '}'  (48)

	'{'  shift 29
	.  error


state 20
	tipoCompuesto : '[' . INT_CONSTANT ']' tipoCompuesto  (47)

	INT_CONSTANT  shift 30
	.  error


state 21
	tipoCompuesto : tipo .  (46)

	.  reduce 46


state 22
	variable : ident ':' tipoCompuesto . ';'  (40)

	';'  shift 31
	.  error


state 23
	ident : ident ',' ID .  (42)

	.  reduce 42


state 24
	parametro : ID . ':' tipo  (37)

	':'  shift 32
	.  error


state 25
	funcion : DEF ID '(' parametros . ')' ':' tipoReturn body  (6)

	')'  shift 33
	.  error


state 26
	parametros : parametrosAUX .  (33)
	parametrosAUX : parametrosAUX . ',' parametro  (36)

	','  shift 34
	')'  reduce 33


state 27
	parametrosAUX : parametro .  (35)

	.  reduce 35


state 28
	main : DEF MAIN '(' ')' . ':' VOID body  (7)

	':'  shift 35
	.  error


state 29
	tipoCompuesto : STRUCT '{' . bodyStruct '}'  (48)

	ID  shift 3
	.  error

	ident  goto 36
	bodyStruct  goto 37
	variablesStruct  goto 38


state 30
	tipoCompuesto : '[' INT_CONSTANT . ']' tipoCompuesto  (47)

	']'  shift 39
	.  error


state 31
	variable : ident ':' tipoCompuesto ';' .  (40)

	.  reduce 40


state 32
	parametro : ID ':' . tipo  (37)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	.  error

	tipo  goto 40


state 33
	funcion : DEF ID '(' parametros ')' . ':' tipoReturn body  (6)

	':'  shift 41
	.  error


state 34
	parametrosAUX : parametrosAUX ',' . parametro  (36)

	ID  shift 24
	.  error

	parametro  goto 42


state 35
	main : DEF MAIN '(' ')' ':' . VOID body  (7)

	VOID  shift 43
	.  error


state 36
	ident : ident . ',' ID  (42)
	variablesStruct : ident . ':' tipoCompuesto ';'  (53)

	':'  shift 44
	','  shift 13
	.  error


state 37
	tipoCompuesto : STRUCT '{' bodyStruct . '}'  (48)
	bodyStruct : bodyStruct . variablesStruct  (52)

	ID  shift 3
	'}'  shift 45
	.  error

	ident  goto 36
	variablesStruct  goto 46


state 38
	bodyStruct : variablesStruct .  (51)

	.  reduce 51


state 39
	tipoCompuesto : '[' INT_CONSTANT ']' . tipoCompuesto  (47)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21
	tipoCompuesto  goto 47


state 40
	parametro : ID ':' tipo .  (37)

	.  reduce 37


state 41
	funcion : DEF ID '(' parametros ')' ':' . tipoReturn body  (6)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	VOID  shift 48
	.  error

	tipoReturn  goto 49
	tipo  goto 50


state 42
	parametrosAUX : parametrosAUX ',' parametro .  (36)

	.  reduce 36


state 43
	main : DEF MAIN '(' ')' ':' VOID . body  (7)

	'{'  shift 51
	.  error

	body  goto 52


state 44
	variablesStruct : ident ':' . tipoCompuesto ';'  (53)

	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	STRUCT  shift 19
	'['  shift 20
	.  error

	tipo  goto 21
	tipoCompuesto  goto 53


state 45
	tipoCompuesto : STRUCT '{' bodyStruct '}' .  (48)

	.  reduce 48


state 46
	bodyStruct : bodyStruct variablesStruct .  (52)

	.  reduce 52


state 47
	tipoCompuesto : '[' INT_CONSTANT ']' tipoCompuesto .  (47)

	.  reduce 47


state 48
	tipoReturn : VOID .  (50)

	.  reduce 50


state 49
	funcion : DEF ID '(' parametros ')' ':' tipoReturn . body  (6)

	'{'  shift 51
	.  error

	body  goto 54


state 50
	tipoReturn : tipo .  (49)

	.  reduce 49


state 51
	body : '{' . variables sentencias '}'  (8)
	body : '{' . '}'  (9)
	body : '{' . sentencias '}'  (10)
	body : '{' . variables '}'  (11)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 57
	CHAR_CONSTANT  shift 58
	INPUT  shift 59
	PRINT  shift 60
	WHILE  shift 61
	IF  shift 62
	RETURN  shift 63
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	'}'  shift 67
	.  error

	variable  goto 68
	variables  goto 69
	sentencias  goto 70
	sentencia  goto 71
	expression  goto 72
	while  goto 73
	print  goto 74
	input  goto 75
	if  goto 76
	ifSimple  goto 77
	invocationStat  goto 78
	assignment  goto 79
	invocationExpr  goto 80
	ident  goto 9
	cast  goto 81


state 52
	main : DEF MAIN '(' ')' ':' VOID body .  (7)

	.  reduce 7


state 53
	variablesStruct : ident ':' tipoCompuesto . ';'  (53)

	';'  shift 82
	.  error


state 54
	funcion : DEF ID '(' parametros ')' ':' tipoReturn body .  (6)

	.  reduce 6


state 55
	expression : INT_CONSTANT .  (76)

	.  reduce 76


state 56
	expression : REAL_CONSTANT .  (75)

	.  reduce 75


state 57
	invocationStat : ID . '(' paramsInvocation ')'  (22)
	invocationExpr : ID . '(' paramsInvocation ')'  (23)
	ident : ID .  (41)
	expression : ID .  (56)

	'('  shift 83
	MENORIGUAL  reduce 56
	MAYORIGUAL  reduce 56
	EQUIVALENTE  reduce 56
	DISTINTO  reduce 56
	OR  reduce 56
	AND  reduce 56
	'='  reduce 56
	'>'  reduce 56
	'<'  reduce 56
	'+'  reduce 56
	'-'  reduce 56
	'*'  reduce 56
	'/'  reduce 56
	'%'  reduce 56
	'.'  reduce 56
	'['  reduce 56
	':'  reduce 41
	','  reduce 41


state 58
	expression : CHAR_CONSTANT .  (77)

	.  reduce 77


state 59
	input : INPUT . expressiones ';'  (83)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 85
	invocationExpr  goto 80
	expressiones  goto 86
	cast  goto 81


state 60
	print : PRINT . expressiones ';'  (82)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 85
	invocationExpr  goto 80
	expressiones  goto 87
	cast  goto 81


state 61
	while : WHILE . expression ':' '{' sentencias '}'  (81)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 88
	invocationExpr  goto 80
	cast  goto 81


state 62
	if : IF . expression ':' sentencia ELSE sentencia  (27)
	if : IF . expression ':' sentencia ELSE '{' sentencias '}'  (28)
	if : IF . expression ':' '{' sentencias '}' ELSE sentencia  (29)
	if : IF . expression ':' '{' sentencias '}' ELSE '{' sentencias '}'  (30)
	ifSimple : IF . expression ':' sentencia  (31)
	ifSimple : IF . expression ':' '{' sentencias '}'  (32)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 89
	invocationExpr  goto 80
	cast  goto 81


state 63
	sentencia : RETURN . expression ';'  (14)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 90
	invocationExpr  goto 80
	cast  goto 81


state 64
	expression : '-' . expression  (66)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 91
	invocationExpr  goto 80
	cast  goto 81


state 65
	expression : '!' . expression  (65)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 92
	invocationExpr  goto 80
	cast  goto 81


state 66
	expression : '(' . expression ')'  (63)
	cast : '(' . tipo ')' expression  (80)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	INT  shift 16
	DOUBLE  shift 17
	CHAR  shift 18
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 93
	invocationExpr  goto 80
	tipo  goto 94
	cast  goto 81


state 67
	body : '{' '}' .  (9)

	.  reduce 9


state 68
	variables : variable .  (38)

	.  reduce 38


state 69
	body : '{' variables . sentencias '}'  (8)
	body : '{' variables . '}'  (11)
	variables : variables . variable  (39)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 57
	CHAR_CONSTANT  shift 58
	INPUT  shift 59
	PRINT  shift 60
	WHILE  shift 61
	IF  shift 62
	RETURN  shift 63
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	'}'  shift 95
	.  error

	variable  goto 96
	sentencias  goto 97
	sentencia  goto 71
	expression  goto 72
	while  goto 73
	print  goto 74
	input  goto 75
	if  goto 76
	ifSimple  goto 77
	invocationStat  goto 78
	assignment  goto 79
	invocationExpr  goto 80
	ident  goto 9
	cast  goto 81


state 70
	body : '{' sentencias . '}'  (10)
	sentencias : sentencias . sentencia  (13)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 98
	CHAR_CONSTANT  shift 58
	INPUT  shift 59
	PRINT  shift 60
	WHILE  shift 61
	IF  shift 62
	RETURN  shift 63
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	'}'  shift 99
	.  error

	sentencia  goto 100
	expression  goto 72
	while  goto 73
	print  goto 74
	input  goto 75
	if  goto 76
	ifSimple  goto 77
	invocationStat  goto 78
	assignment  goto 79
	invocationExpr  goto 80
	cast  goto 81


state 71
	sentencias : sentencia .  (12)

	.  reduce 12


state 72
	assignment : expression . '=' expression ';'  (26)
	expression : expression . '+' expression  (57)
	expression : expression . '-' expression  (58)
	expression : expression . '*' expression  (59)
	expression : expression . '/' expression  (60)
	expression : expression . '%' expression  (61)
	expression : expression . '.' ID  (62)
	expression : expression . '[' expression ']'  (64)
	expression : expression . '>' expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . DISTINTO expression  (69)
	expression : expression . MAYORIGUAL expression  (70)
	expression : expression . MENORIGUAL expression  (71)
	expression : expression . EQUIVALENTE expression  (72)
	expression : expression . AND expression  (73)
	expression : expression . OR expression  (74)

	MENORIGUAL  shift 101
	MAYORIGUAL  shift 102
	EQUIVALENTE  shift 103
	DISTINTO  shift 104
	OR  shift 105
	AND  shift 106
	'='  shift 107
	'>'  shift 108
	'<'  shift 109
	'+'  shift 110
	'-'  shift 111
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'.'  shift 115
	'['  shift 116
	.  error


state 73
	sentencia : while .  (15)

	.  reduce 15


state 74
	sentencia : print .  (16)

	.  reduce 16


state 75
	sentencia : input .  (17)

	.  reduce 17


state 76
	sentencia : if .  (18)

	.  reduce 18


state 77
	sentencia : ifSimple .  (19)

	.  reduce 19


state 78
	sentencia : invocationStat . ';'  (20)

	';'  shift 117
	.  error


state 79
	sentencia : assignment .  (21)

	.  reduce 21


state 80
	expression : invocationExpr .  (79)

	.  reduce 79


state 81
	expression : cast .  (78)

	.  reduce 78


state 82
	variablesStruct : ident ':' tipoCompuesto ';' .  (53)

	.  reduce 53


state 83
	invocationStat : ID '(' . paramsInvocation ')'  (22)
	invocationExpr : ID '(' . paramsInvocation ')'  (23)
	paramsInvocation : .  (25)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	')'  reduce 25

	expression  goto 85
	paramsInvocation  goto 118
	invocationExpr  goto 80
	expressiones  goto 119
	cast  goto 81


state 84
	invocationExpr : ID . '(' paramsInvocation ')'  (23)
	expression : ID .  (56)

	'('  shift 120
	MENORIGUAL  reduce 56
	MAYORIGUAL  reduce 56
	EQUIVALENTE  reduce 56
	DISTINTO  reduce 56
	OR  reduce 56
	AND  reduce 56
	'='  reduce 56
	'>'  reduce 56
	'<'  reduce 56
	'+'  reduce 56
	'-'  reduce 56
	'*'  reduce 56
	'/'  reduce 56
	'%'  reduce 56
	'.'  reduce 56
	'['  reduce 56
	']'  reduce 56
	')'  reduce 56
	':'  reduce 56
	';'  reduce 56
	','  reduce 56


state 85
	expressiones : expression .  (54)
	expression : expression . '+' expression  (57)
	expression : expression . '-' expression  (58)
	expression : expression . '*' expression  (59)
	expression : expression . '/' expression  (60)
	expression : expression . '%' expression  (61)
	expression : expression . '.' ID  (62)
	expression : expression . '[' expression ']'  (64)
	expression : expression . '>' expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . DISTINTO expression  (69)
	expression : expression . MAYORIGUAL expression  (70)
	expression : expression . MENORIGUAL expression  (71)
	expression : expression . EQUIVALENTE expression  (72)
	expression : expression . AND expression  (73)
	expression : expression . OR expression  (74)

	MENORIGUAL  shift 101
	MAYORIGUAL  shift 102
	EQUIVALENTE  shift 103
	DISTINTO  shift 104
	OR  shift 105
	AND  shift 106
	'>'  shift 108
	'<'  shift 109
	'+'  shift 110
	'-'  shift 111
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'.'  shift 115
	'['  shift 116
	')'  reduce 54
	';'  reduce 54
	','  reduce 54


state 86
	expressiones : expressiones . ',' expression  (55)
	input : INPUT expressiones . ';'  (83)

	';'  shift 121
	','  shift 122
	.  error


state 87
	expressiones : expressiones . ',' expression  (55)
	print : PRINT expressiones . ';'  (82)

	';'  shift 123
	','  shift 122
	.  error


state 88
	expression : expression . '+' expression  (57)
	expression : expression . '-' expression  (58)
	expression : expression . '*' expression  (59)
	expression : expression . '/' expression  (60)
	expression : expression . '%' expression  (61)
	expression : expression . '.' ID  (62)
	expression : expression . '[' expression ']'  (64)
	expression : expression . '>' expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . DISTINTO expression  (69)
	expression : expression . MAYORIGUAL expression  (70)
	expression : expression . MENORIGUAL expression  (71)
	expression : expression . EQUIVALENTE expression  (72)
	expression : expression . AND expression  (73)
	expression : expression . OR expression  (74)
	while : WHILE expression . ':' '{' sentencias '}'  (81)

	MENORIGUAL  shift 101
	MAYORIGUAL  shift 102
	EQUIVALENTE  shift 103
	DISTINTO  shift 104
	OR  shift 105
	AND  shift 106
	'>'  shift 108
	'<'  shift 109
	'+'  shift 110
	'-'  shift 111
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'.'  shift 115
	'['  shift 116
	':'  shift 124
	.  error


state 89
	if : IF expression . ':' sentencia ELSE sentencia  (27)
	if : IF expression . ':' sentencia ELSE '{' sentencias '}'  (28)
	if : IF expression . ':' '{' sentencias '}' ELSE sentencia  (29)
	if : IF expression . ':' '{' sentencias '}' ELSE '{' sentencias '}'  (30)
	ifSimple : IF expression . ':' sentencia  (31)
	ifSimple : IF expression . ':' '{' sentencias '}'  (32)
	expression : expression . '+' expression  (57)
	expression : expression . '-' expression  (58)
	expression : expression . '*' expression  (59)
	expression : expression . '/' expression  (60)
	expression : expression . '%' expression  (61)
	expression : expression . '.' ID  (62)
	expression : expression . '[' expression ']'  (64)
	expression : expression . '>' expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . DISTINTO expression  (69)
	expression : expression . MAYORIGUAL expression  (70)
	expression : expression . MENORIGUAL expression  (71)
	expression : expression . EQUIVALENTE expression  (72)
	expression : expression . AND expression  (73)
	expression : expression . OR expression  (74)

	MENORIGUAL  shift 101
	MAYORIGUAL  shift 102
	EQUIVALENTE  shift 103
	DISTINTO  shift 104
	OR  shift 105
	AND  shift 106
	'>'  shift 108
	'<'  shift 109
	'+'  shift 110
	'-'  shift 111
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'.'  shift 115
	'['  shift 116
	':'  shift 125
	.  error


state 90
	sentencia : RETURN expression . ';'  (14)
	expression : expression . '+' expression  (57)
	expression : expression . '-' expression  (58)
	expression : expression . '*' expression  (59)
	expression : expression . '/' expression  (60)
	expression : expression . '%' expression  (61)
	expression : expression . '.' ID  (62)
	expression : expression . '[' expression ']'  (64)
	expression : expression . '>' expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . DISTINTO expression  (69)
	expression : expression . MAYORIGUAL expression  (70)
	expression : expression . MENORIGUAL expression  (71)
	expression : expression . EQUIVALENTE expression  (72)
	expression : expression . AND expression  (73)
	expression : expression . OR expression  (74)

	MENORIGUAL  shift 101
	MAYORIGUAL  shift 102
	EQUIVALENTE  shift 103
	DISTINTO  shift 104
	OR  shift 105
	AND  shift 106
	'>'  shift 108
	'<'  shift 109
	'+'  shift 110
	'-'  shift 111
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'.'  shift 115
	'['  shift 116
	';'  shift 126
	.  error


state 91
	expression : expression . '+' expression  (57)
	expression : expression . '-' expression  (58)
	expression : expression . '*' expression  (59)
	expression : expression . '/' expression  (60)
	expression : expression . '%' expression  (61)
	expression : expression . '.' ID  (62)
	expression : expression . '[' expression ']'  (64)
	expression : '-' expression .  (66)
	expression : expression . '>' expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . DISTINTO expression  (69)
	expression : expression . MAYORIGUAL expression  (70)
	expression : expression . MENORIGUAL expression  (71)
	expression : expression . EQUIVALENTE expression  (72)
	expression : expression . AND expression  (73)
	expression : expression . OR expression  (74)

	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'.'  shift 115
	'['  shift 116
	MENORIGUAL  reduce 66
	MAYORIGUAL  reduce 66
	EQUIVALENTE  reduce 66
	DISTINTO  reduce 66
	OR  reduce 66
	AND  reduce 66
	'='  reduce 66
	'>'  reduce 66
	'<'  reduce 66
	'+'  reduce 66
	'-'  reduce 66
	']'  reduce 66
	')'  reduce 66
	':'  reduce 66
	';'  reduce 66
	','  reduce 66


state 92
	expression : expression . '+' expression  (57)
	expression : expression . '-' expression  (58)
	expression : expression . '*' expression  (59)
	expression : expression . '/' expression  (60)
	expression : expression . '%' expression  (61)
	expression : expression . '.' ID  (62)
	expression : expression . '[' expression ']'  (64)
	expression : '!' expression .  (65)
	expression : expression . '>' expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . DISTINTO expression  (69)
	expression : expression . MAYORIGUAL expression  (70)
	expression : expression . MENORIGUAL expression  (71)
	expression : expression . EQUIVALENTE expression  (72)
	expression : expression . AND expression  (73)
	expression : expression . OR expression  (74)

	'.'  shift 115
	'['  shift 116
	MENORIGUAL  reduce 65
	MAYORIGUAL  reduce 65
	EQUIVALENTE  reduce 65
	DISTINTO  reduce 65
	OR  reduce 65
	AND  reduce 65
	'='  reduce 65
	'>'  reduce 65
	'<'  reduce 65
	'+'  reduce 65
	'-'  reduce 65
	'*'  reduce 65
	'/'  reduce 65
	'%'  reduce 65
	']'  reduce 65
	')'  reduce 65
	':'  reduce 65
	';'  reduce 65
	','  reduce 65


state 93
	expression : expression . '+' expression  (57)
	expression : expression . '-' expression  (58)
	expression : expression . '*' expression  (59)
	expression : expression . '/' expression  (60)
	expression : expression . '%' expression  (61)
	expression : expression . '.' ID  (62)
	expression : '(' expression . ')'  (63)
	expression : expression . '[' expression ']'  (64)
	expression : expression . '>' expression  (67)
	expression : expression . '<' expression  (68)
	expression : expression . DISTINTO expression  (69)
	expression : expression . MAYORIGUAL expression  (70)
	expression : expression . MENORIGUAL expression  (71)
	expression : expression . EQUIVALENTE expression  (72)
	expression : expression . AND expression  (73)
	expression : expression . OR expression  (74)

	MENORIGUAL  shift 101
	MAYORIGUAL  shift 102
	EQUIVALENTE  shift 103
	DISTINTO  shift 104
	OR  shift 105
	AND  shift 106
	'>'  shift 108
	'<'  shift 109
	'+'  shift 110
	'-'  shift 111
	'*'  shift 112
	'/'  shift 113
	'%'  shift 114
	'.'  shift 115
	'['  shift 116
	')'  shift 127
	.  error


state 94
	cast : '(' tipo . ')' expression  (80)

	')'  shift 128
	.  error


state 95
	body : '{' variables '}' .  (11)

	.  reduce 11


state 96
	variables : variables variable .  (39)

	.  reduce 39


state 97
	body : '{' variables sentencias . '}'  (8)
	sentencias : sentencias . sentencia  (13)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 98
	CHAR_CONSTANT  shift 58
	INPUT  shift 59
	PRINT  shift 60
	WHILE  shift 61
	IF  shift 62
	RETURN  shift 63
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	'}'  shift 129
	.  error

	sentencia  goto 100
	expression  goto 72
	while  goto 73
	print  goto 74
	input  goto 75
	if  goto 76
	ifSimple  goto 77
	invocationStat  goto 78
	assignment  goto 79
	invocationExpr  goto 80
	cast  goto 81


state 98
	invocationStat : ID . '(' paramsInvocation ')'  (22)
	invocationExpr : ID . '(' paramsInvocation ')'  (23)
	expression : ID .  (56)

	'('  shift 83
	MENORIGUAL  reduce 56
	MAYORIGUAL  reduce 56
	EQUIVALENTE  reduce 56
	DISTINTO  reduce 56
	OR  reduce 56
	AND  reduce 56
	'='  reduce 56
	'>'  reduce 56
	'<'  reduce 56
	'+'  reduce 56
	'-'  reduce 56
	'*'  reduce 56
	'/'  reduce 56
	'%'  reduce 56
	'.'  reduce 56
	'['  reduce 56


state 99
	body : '{' sentencias '}' .  (10)

	.  reduce 10


state 100
	sentencias : sentencias sentencia .  (13)

	.  reduce 13


state 101
	expression : expression MENORIGUAL . expression  (71)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 130
	invocationExpr  goto 80
	cast  goto 81


state 102
	expression : expression MAYORIGUAL . expression  (70)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 131
	invocationExpr  goto 80
	cast  goto 81


state 103
	expression : expression EQUIVALENTE . expression  (72)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 132
	invocationExpr  goto 80
	cast  goto 81


state 104
	expression : expression DISTINTO . expression  (69)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 133
	invocationExpr  goto 80
	cast  goto 81


state 105
	expression : expression OR . expression  (74)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 134
	invocationExpr  goto 80
	cast  goto 81


state 106
	expression : expression AND . expression  (73)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 135
	invocationExpr  goto 80
	cast  goto 81


state 107
	assignment : expression '=' . expression ';'  (26)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 136
	invocationExpr  goto 80
	cast  goto 81


state 108
	expression : expression '>' . expression  (67)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 137
	invocationExpr  goto 80
	cast  goto 81


state 109
	expression : expression '<' . expression  (68)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 138
	invocationExpr  goto 80
	cast  goto 81


state 110
	expression : expression '+' . expression  (57)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 139
	invocationExpr  goto 80
	cast  goto 81


state 111
	expression : expression '-' . expression  (58)

	INT_CONSTANT  shift 55
	REAL_CONSTANT  shift 56
	ID  shift 84
	CHAR_CONSTANT  shift 58
	'-'  shift 64
	'!'  shift 65
	'('  shift 66
	.  error

	expression  goto 140
	invocationExpr  goto 80
	cast  goto 81

